# routes/index.js
@@ -2,8 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/vhs', require('./vhs'));
-router.use('/books', require('./books'));
+router.use('/task', require('./task'));
 
 router.get('/', (req, res) => {
     res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
